[package]
name = "signalr_rs"
version = "0.1.4"
authors = ["Guillaume Balaine <igosuki@gmail.com>"]
edition = "2018"
description = "SignalR client based on actix web client and async await"
keywords = [ "signalr", "actix" ]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Igosuki/signalr-rs"
repository = "https://github.com/Igosuki/signalr-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "bittrex_signalr"
path = "examples/bittrex.rs"

[dependencies]
awc = "3.0.0-beta.5"
actix-web = { version ="4.0.0-beta.6", features = ["openssl"] }
actix = "0.12"
actix-http = "3.0.0-beta.6"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
failure = "0.1.6"
url = "2.1.0"
actix-codec = "0.4"
futures = "0.3"
openssl = "0.10.26"
bytes = "1.0"
derive_more = "0.99"
base64 = "0.13"
libflate = "1.1"
log = "0.4"
env_logger = "0.8"
regex = "1.4"
lazy_static = "1.4"
backoff = "0.3"

[dev-dependencies]
actix-rt = "2.2"
