[package]
name = "signalr_rs"
version = "0.2.2"
authors = ["Guillaume Balaine <igosuki@gmail.com>"]
edition = "2018"
description = "SignalR client based on actix web client and async await"
keywords = [ "signalr", "actix" ]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Igosuki/signalr-rs"
repository = "https://github.com/Igosuki/signalr-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "bittrex_signalr"
path = "examples/bittrex.rs"

[features]
default = ["zstd"]
zstd = ["actix-web/compress-zstd", "awc/compress-zstd"]
no_trace_release = ["log/release_max_level_debug"]
rustls = ["actix-web/rustls", "awc/rustls"]
native-tls = ["actix-web/openssl", "awc/openssl"]

[dependencies]
actix-web = { version = "4.0.0-rc", features = ["compress-brotli", "compress-gzip", "cookies"], default-features = false }
awc = { version = "3.0.0-beta", features = ["compress-brotli", "compress-gzip", "cookies"], default-features = false }
actix = "0.12"
actix-http = "3.0.0-rc"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
url = "2.2"
actix-codec = "0.5"
futures = "0.3"
openssl = "0.10"
bytes = "1"
derive_more = "0.99"
base64 = "0.13"
libflate = "1.1"
log = "0.4"
env_logger = "0.9"
lazy_static = "1.4"
backoff = "0.4"

[dev-dependencies]
actix-rt = "2.2"
